<resources>
    <string name="app_name">Final Project New Testing</string>
    <string name="s1">Login or Sign up</string>
    <string name="s2">LOGIN</string>
    <string name="s3">SIGN UP</string>
    <string name="s4">Sign Up</string>
    <string name="s5">COVID-19 Dashboard</string>
    <string name="s6">Affected</string>
    <string name="affectedData" />
    <string name="s7">Death</string>
    <string name="s8">Recovered</string>
    <string name="s9">Active</string>
    <string name="deathData" />
    <string name="recoveredData" />
    <string name="activeData" />
    <string name="title_activity_game_main">gameMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_covid">COVID-19 Dashboard</string>
    <string name="menu_game">Game</string>
    <string name="menu_leader">High Score</string>
    <string name="s10">CHOOSE A MODE</string>
    <string name="s11">PLAY</string>
    <string name="s12">Guess a number between 1 and X.  Guess correctly in a row and get a high score.</string>
    <string name="s13">Select number of attempts, then guess a number between 1 and X and get a high score.</string>
    <string name="s14">YOUR HIGH SCORE</string>
    <string name="stringScore" />
    <string name="s15">SCORE:</string>
    <string name="s16">ATTEMPTS:</string>
    <string name="s17">Guess a number between 1 and X \n?</string>
    <string name="s18">Enter a number</string>
    <string name="scoreNum"></string>
    <string name="attemptNum" />
    <string name="s21">SUBMIT</string>
    <string name="s23">OR</string>

    <string name="s24">Enter number of attempts</string>
    <string name="s30">Enter range</string>

</resources>