<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalprojectnewtesting.ui.Game.HomeFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_game"
        android:name="com.example.finalprojectnewtesting.ui.gamePlayNew"
        android:label="@string/menu_game"
        tools:layout="@layout/activity_game_play_new" />

    <activity
        android:id="@+id/nav_leader"
        android:name="com.example.finalprojectnewtesting.ui.leaderView"
        android:label="@string/menu_leader"
        tools:layout="@layout/activity_leader_view" />

    <activity
        android:id="@+id/nav_covid"
        android:name="com.example.finalprojectnewtesting.ui.Covidview"
        android:label="@string/menu_covid"
        tools:layout="@layout/activity_covidview" />
</navigation>